--- a/AdashimaaTube.user.css
+++ b/AdashimaaTube.user.css
@@ -195,12 +195,17 @@ Support me: https://ko-fi.com/sapondanaisriwan
             margin-top: 20px !important;
         }
 
+        #below > ytd-watch-metadata > above-the-fold > #title > #top-row {
+            border-bottom: 1px solid var(--yt-spec-10-percent-layer);
+            padding-bottom: 10px;
+        }
 
         /* Reverts the video title font. */
         h1.ytd-watch-metadata {
             font-family: "Roboto", sans-serif;
             font-weight: 400 !important;
             font-size: 18px !important; // line-height: unset;
+            margin-top: 25px;
         }
 
         /* Remove channel */
@@ -245,7 +250,7 @@ Support me: https://ko-fi.com/sapondanaisriwan
         .style-scope.ytd-watch-flexy #container #info-text {
             // position: absolute;
             // bottom: 3.7em !important;
-            margin-top: -8.57em; // 120px
+            margin-top: -115px;
             // pointer-events: none;
         }
 
