--- a/AdashimaaTube.user.css
+++ b/AdashimaaTube.user.css
@@ -195,17 +195,25 @@ Support me: https://ko-fi.com/sapondanaisriwan
             margin-top: 20px !important;
         }
 
-        #below > ytd-watch-metadata > above-the-fold > #title > #top-row {
-            border-bottom: 1px solid var(--yt-spec-10-percent-layer);
-            padding-bottom: 10px;
+        ytd-video-primary-info-renderer {
+            
         }
-
+        
+        #top-row.ytd-watch-metadata {
+            border-bottom: 1px solid var(--yt-spec-10-percent-layer);
+            padding-bottom: 10px !important;
+        }
+        
+        ytd-watch-metadata #title {
+            position: relative;
+            bottom: -4px
+        }
+        
         /* Reverts the video title font. */
         h1.ytd-watch-metadata {
             font-family: "Roboto", sans-serif;
             font-weight: 400 !important;
             font-size: 18px !important; // line-height: unset;
-            margin-top: 25px;
         }
 
         /* Remove channel */
@@ -250,8 +258,7 @@ Support me: https://ko-fi.com/sapondanaisriwan
         .style-scope.ytd-watch-flexy #container #info-text {
             // position: absolute;
             // bottom: 3.7em !important;
-            margin-top: -115px;
-            // pointer-events: none;
+            margin-top: -115px; // pointer-events: none;
         }
 
         #top-row.ytd-watch-metadata,
