--- a/AdashimaaTube.user.css
+++ b/AdashimaaTube.user.css
@@ -6,7 +6,7 @@
 @homepageURL    https://github.com/sapondanaisriwan/Youtube-Old-Layout
 @supportURL     https://github.com/sapondanaisriwan/Youtube-Old-Layout/issues
 @updateURL      https://userstyles.world/api/style/6944.user.css
-@version        1.4.2
+@version        1.4.3
 @license        MIT
 @preprocessor   stylus
 
@@ -57,7 +57,8 @@ Support me: https://ko-fi.com/sapondanaisriwan
     if (cutom_homepage=="Enabled") {
 
         /* Custom videos per row on homepage */
-        [page-subtype="home"] {
+        [page-subtype="home"],
+        [page-subtype="channels"] {
             ytd-rich-grid-renderer {
                 --ytd-rich-grid-items-per-row: var(--video-per-row) !important;
                 /* Makes the container/spacing disappear */
@@ -83,7 +84,18 @@ Support me: https://ko-fi.com/sapondanaisriwan
                 display: none;
             }
 
+            [page-subtype="channels"] {
+                #contents > ytd-rich-item-renderer {
+                    margin: 0 4px 20px 4px
+                }
+            }
+
             [page-subtype="home"] {
+
+                ytd-rich-grid-media a#avatar-link {
+                    display: none;
+                }
+
                 ytd-rich-grid-renderer > div#contents {
                     max-width: calc(100% - 2 * 3vw);
                 }
@@ -194,17 +206,17 @@ Support me: https://ko-fi.com/sapondanaisriwan
             display: block !important;
             margin-top: 20px !important;
         }
-        
+
         #top-row.ytd-watch-metadata {
             border-bottom: 1px solid var(--yt-spec-10-percent-layer);
             padding-bottom: 10px !important;
         }
-        
+
         ytd-watch-metadata #title {
             position: relative;
             bottom: -4px
         }
-        
+
         /* Reverts the video title font. */
         h1.ytd-watch-metadata {
             font-family: "Roboto", sans-serif;
@@ -541,19 +553,26 @@ Support me: https://ko-fi.com/sapondanaisriwan
     /* Subscribed button */
     #subscribe,
     #subscribe-button {
-        /* Red Subscribed button */
-        yt-button-shape button {
-            border-radius: custom_border_radius;
-            color: var(--yt-spec-static-brand-white) !important;
-            background-color: var(--yt-spec-brand-button-background) !important;
-        }
-        /* Unsubscribe button */
-        yt-button-shape button[aria-label^=Unsubscribe] {
-            border-radius: custom_border_radius;
-            color: var(--yt-spec-text-secondary) !important;
-            background-color: var(--yt-spec-badge-chip-background) !important;
+        yt-button-shape {
+
+            /* Red Subscribed button */
+            button,
+            a[aria-label="Subscribe"] {
+                /* InPrivate */
+                border-radius: custom_border_radius;
+                color: var(--yt-spec-static-brand-white) !important;
+                background-color: var(--yt-spec-brand-button-background) !important;
+            }
+
+            /* Unsubscribe button */
+            button[aria-label^=Unsubscribe] {
+                border-radius: custom_border_radius;
+                color: var(--yt-spec-text-secondary) !important;
+                background-color: var(--yt-spec-badge-chip-background) !important;
+            }
         }
     }
+
 
     /* Shot Unsubscribe button */
     html[dark] ytd-shorts #subscribe-button yt-button-shape button[aria-label^=Unsubscribe] {
