--- a/AdashimaaTube.user.css
+++ b/AdashimaaTube.user.css
@@ -24,13 +24,13 @@
 @advanced color like_color "  👍 Like Button Color" #3ea6ff
 @advanced color dislike_color "  👎 Dislike Button Color" #3ea6ff
 
-@advanced checkbox add_animation "🎬 Animations" 1
+@advanced checkbox add_animation "🎬 More Animations" 1
 @advanced checkbox old-dark-theme "🌑 Dark Navigation Bars" 0
 @advanced checkbox restore_old_playlist "▶️ Restore Old Playlist" 0
 @advanced checkbox display-full-title "🎦 Display Full Title For Video" 0
 @advanced checkbox fix-search-results  "🔎 Centered The Search Results" 0
 @advanced checkbox remove-text-btn "❌ Remove Text On Buttons" 0
-@advanced checkbox remove-chips "❌ Remove Chips" 0
+@advanced checkbox remove-chips "❌ Remove Taps" 0
 @advanced checkbox hide-share-btn "🫣 Hide Share Button" 0
 @advanced checkbox hide-download-btn "🫣 Hide Download Button" 0
 @advanced checkbox hide-clip-btn "🫣 Hide Clip Button" 0
