--- a/AdashimaaTube.user.css
+++ b/AdashimaaTube.user.css
@@ -6,7 +6,7 @@
 @homepageURL    https://github.com/sapondanaisriwan/Youtube-Old-Layout
 @supportURL     https://github.com/sapondanaisriwan/Youtube-Old-Layout/issues
 @updateURL      https://userstyles.world/api/style/6944.user.css
-@version        1.4.5
+@version        1.4.6
 @license        MIT
 @preprocessor   stylus
 
@@ -29,7 +29,7 @@
 @advanced checkbox restore_old_playlist "▶️ Restore Old Playlist" 0
 @advanced checkbox display-full-title "🎦 Display Full Title For Videos" 0
 @advanced checkbox fix-search-results  "🔎 Centered The Search Results" 0
-@advanced checkbox remove_shorts "❌ Remove Shorts" 0
+@advanced checkbox remove_shorts "❌ Remove Shorts (Beta)" 0
 @advanced checkbox remove-chips "❌ Remove Taps" 0
 @advanced checkbox remove-text-btn "❌ Remove Text On Buttons" 0
 @advanced checkbox hide-share-btn "🫣 Hide Share Button" 0
