Fixed subscribe/unsubscribe  buttons

--- a/AdashimaaTube.user.css
+++ b/AdashimaaTube.user.css
@@ -460,7 +460,7 @@ Support me: https://ko-fi.com/sapondanaisriwan
             }
         }
         #contents > ytd-rich-item-renderer :has(a[href*="/shorts/"]) {
-            display: none !important;
+            display: none!important;
         }
     }
 
@@ -589,34 +589,47 @@ Support me: https://ko-fi.com/sapondanaisriwan
 
 
     /* Subscribed button */
-        #subscribe,
-        #subscribe-button {
-            yt-button-shape {
-                button,
-                a[aria-label="Subscribe"] {
-                    /* InPrivate */
-                    border-radius: custom_border_radius;
-                    color: var(--yt-spec-static-brand-white) !important;
-                    background-color: var(--yt-spec-brand-button-background) !important;
-                }
-                /* Unsubscribe button */
-                button[aria-label^=Unsubscribe],
-                button.yt-spec-button-shape-next.yt-spec-button-shape-next--tonal {
-                    border-radius: custom_border_radius;
-                    color: var(--yt-spec-text-secondary) !important;
-                    background-color: var(--yt-spec-badge-chip-background) !important;
-                }
+    #subscribe,
+    #subscribe-button {
+        yt-button-shape {
+
+            /* Red Subscribed button */
+            button,
+            a[aria-label="Subscribe"] {
+                /* InPrivate */
+                border-radius: custom_border_radius;
+                color: var(--yt-spec-static-brand-white) !important;
+                background-color: var(--yt-spec-brand-button-background) !important;
             }
-        } 
+
+            /* Unsubscribe button */
+            button[aria-label^=Unsubscribe],
+            button.yt-spec-button-shape-next--mono.yt-spec-button-shape-next--tonal {
+                border-radius: custom_border_radius;
+                color: var(--yt-spec-text-secondary) !important;
+                background-color: var(--yt-spec-badge-chip-background) !important;
+            }
+        }
+    }
+
 
     /* Shot Unsubscribe button */
-    html[dark] ytd-shorts #subscribe-button yt-button-shape button[aria-label^=Unsubscribe] {
-        background-color: var(--sub-black-bg-btn) !important;
+    html[dark] ytd-shorts #subscribe-button yt-button-shape {
+        button[aria-label^=Unsubscribe],
+        button.yt-spec-button-shape-next--overlay.yt-spec-button-shape-next--tonal {
+            color: var(--yt-spec-text-secondary) !important;
+            background-color: var(--sub-black-bg-btn) !important;
+        }
     }
-    html:not([dark]) ytd-shorts #subscribe-button yt-button-shape button[aria-label^=Unsubscribe] {
-        background-color: var(--sub-white--text-btn) !important;
+    html:not([dark]) {
+        ytd-shorts #subscribe-button yt-button-shape {
+            button[aria-label^=Unsubscribe],
+            button.yt-spec-button-shape-next--overlay.yt-spec-button-shape-next--tonal {
+                color: var(--yt-spec-text-secondary) !important;
+                background-color: var(--sub-white--text-btn) !important;
+            }
+        }
     }
-
 
 
 
@@ -809,15 +822,7 @@ Support me: https://ko-fi.com/sapondanaisriwan
     }
 
     /* Not interested */
-    ytd-rich-grid-media[rounded-container] #dismissed.ytd-rich-grid-media,
-    #dismissed.ytd-compact-video-renderer {
-        border-radius: custom_border_radius !important;
-    }
-
-    /* Inform news such as covid19 */
-    ytd-clarification-renderer[round-container],
-    ytd-info-panel-container-renderer[rounded-container][has-title] .header.ytd-info-panel-container-renderer,
-    ytd-medical-panel-content-renderer[rounded-container] {
+    ytd-rich-grid-media[rounded-container] #dismissed.ytd-rich-grid-media {
         border-radius: custom_border_radius !important;
     }
 
@@ -869,6 +874,7 @@ Support me: https://ko-fi.com/sapondanaisriwan
     }
 
     /* Join button */
+    #sponsor-button yt-button-shape button // for other language
     yt-button-shape button[aria-label="Join this channel"],
     #buttons ytd-toggle-button-renderer yt-button-shape button {
         color: var(--yt-spec-call-to-action) !important; // #065fd4
